name:                webBug
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/webBug#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable webBug
  hs-source-dirs:      src
  main-is:             WebBug.hs
  default-language:    Haskell2010
  other-modules:
    Regscr
    WebApi
  build-depends:       base >= 4.7 && < 5,
                       split >= 0.2.2,
                       regex-posix >= 0.95.2,
                       network >= 2.3,
                       HTTP >= 4000.3.11,
                       mtl >= 2.2.2,
                       network-uri >= 2.6.1.0
